Color Picker: Dark mode fixes

--- a/assets/dev/scss/direction/editor-dark-mode.scss
+++ b/assets/dev/scss/direction/editor-dark-mode.scss
@@ -389,14 +389,14 @@ $devices: 'desktop', 'tablet', 'mobile';
 		color: $theme-dark-light;
 	}
 
-	&-area {
-		background-image: linear-gradient(45deg, $theme-dark-gray-darkest 25%, transparent 25%, transparent 75%, $theme-dark-gray-darkest 75%, $theme-dark-gray-darkest), linear-gradient(45deg, $theme-dark-gray-darkest 25%, transparent 25%, transparent 75%, $theme-dark-gray-darkest 75%, $theme-dark-gray-darkest);
-		background-color: $theme-dark-gray-light;
-	}
-
 	.elementor-control-media__tool {
 		background-color: $theme-dark-gray-lighter;
 	}
+}
+
+.elementor-control-media-area, .pcr-app[data-theme=monolith] .pcr-color-palette, .pcr-button {
+	background-image: linear-gradient(45deg, $theme-dark-gray-darkest 25%, transparent 25%, transparent 75%, $theme-dark-gray-darkest 75%, $theme-dark-gray-darkest), linear-gradient(45deg, $theme-dark-gray-darkest 25%, transparent 25%, transparent 75%, $theme-dark-gray-darkest 75%, $theme-dark-gray-darkest);
+	background-color: $theme-dark-gray-light;
 }
 
 .elementor-control-type-icons {
